--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   font_awesome_flutter: 10.7.0
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.18.1
+  localization: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,7 +45,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-
+  intl_utils: ^2.8.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
