--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   localization: ^2.1.1
+generate: true
+flutter_intl:
+  enable: true
+  path: l10n # Your folder path containing .arb files
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
