--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,11 @@ dependencies:
   logging: ^1.2.0
   google_sign_in: ^6.2.1
   supabase_flutter: ^2.3.4
-  firebase_core: ^2.27.0
-  firebase_auth: ^4.17.8
   fluttertoast: ^8.2.4
   flutter_dotenv: ^5.1.0
   flutter_signin_button: ^2.0.0
   flutter_svg: ^2.0.10+1
+  package_info_plus: ^5.0.1
 generate: true
 flutter_intl:
   enable: true
