--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,22 +1,25 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.2.0'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
-
-
-dependencies {
-    classpath 'com.android.tools.build:gradle:VERSION'
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
-}
 }
 
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(':app')
 }
 
