--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,10 @@ dependencies:
   google_sign_in: ^6.2.1
   supabase_flutter: ^2.3.4
   fluttertoast: ^8.2.4
-  flutter_dotenv: ^5.1.0
   flutter_signin_button: ^2.0.0
   flutter_svg: ^2.0.10+1
   package_info_plus: ^5.0.1
+  flutter_dotenv: ^5.1.0
 generate: true
 flutter_intl:
   enable: true
@@ -80,7 +80,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
