--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -14,8 +14,13 @@ jobs:
           distribution: 'temurin'
           java-version: '17.0.9'
       - uses: subosito/flutter-action@v1
+        id: flutter
         with:
-          flutter-version: '3.3.1' # Specify your Flutter version
+          flutter-version: '3.3.1'
+      - name: Check Dart SDK version
+        run: |
+          echo "Dart SDK version: ${{ steps.flutter.outputs.dart-version }}"
+          dart --version
       - name: Install dependencies
         run: flutter pub get
       - name: Run linting and static analysis
