--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -13,6 +13,9 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17.0.9'
+      - uses: dart-lang/setup-dart@v1
+        with:
+          sdk: 'stable'
       - uses: subosito/flutter-action@v1
         id: flutter
         with:
