--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -13,6 +13,14 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17.0.9'
+      - name: Cache Dart SDK
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/dartsdk
+          key: ${{ runner.os }}-dart-sdk-v1-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-dart-sdk-v1-
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: 'stable'
