--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -35,29 +35,24 @@ jobs:
       - name: Check Bundled Dart SDK Version
         run: flutter doctor -v
 
-      - name: Install dependencies
+      - name: Create .env file
         run: |
-          PATH=$(dirname $(which dart)):$PATH
-          PATH=$(dirname $(which flutter)):$PATH
-          flutter pub get
+          echo "IOS_CLIENT_ID=${{ secrets.IOS_CLIENT_ID }}" >> .env
+          echo "SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }}" >> .env
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env
+          echo "WEB_CLIENT_ID=${{ secrets.WEB_CLIENT_ID }}" >> .env
+
+      - name: Install dependencies
+        run: flutter pub get
 
       - name: Run linting and static analysis
-        run: |
-          PATH=$(dirname $(which dart)):$PATH
-          flutter analyze
+        run: flutter analyze
 
       - name: Run tests
-        run: |
-          PATH=$(dirname $(which dart)):$PATH
-          flutter test
+        run: flutter test
 
       - name: Build APK for development
-        run: |
-          PATH=$(dirname $(which dart)):$PATH
-          flutter build apk --debug
+        run: flutter build apk --debug
 
       - name: Build iOS for development
-        run: |
-          PATH=$(dirname $(which dart)):$PATH
-          flutter build ios --debug
-      # Add caching, handling .env files, and other necessary steps as needed
+        run: flutter build ios --debug
