--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,18 @@ dependencies:
   localization: ^2.1.1
   logging_to_logcat: ^1.0.0
   logging: ^1.2.0
+  logger: ^2.2.0
   google_sign_in: ^6.2.1
-  supabase_flutter: ^2.5.1
+  supabase_flutter: ^2.5.2
   fluttertoast: ^8.2.4
   flutter_signin_button: ^2.0.0
+  flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
   package_info_plus: ^8.0.0
   flutter_dotenv: ^5.1.0
+  provider: ^6.1.2
+  meta: ^1.11.0
+  bloc: ^8.1.4
 generate: true
 flutter_intl:
   enable: true
@@ -82,6 +87,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - config/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
