Got no_internet_page.dart working with internationalization

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,6 @@ dependencies:
   dartz: ^0.10.1
   connectivity_plus: ^6.0.2
   internet_connection_checker: ^1.0.0
-generate: true
 flutter_intl:
   enable: true
   path: l10n # Your folder path containing .arb files
@@ -68,6 +67,7 @@ dev_dependencies:
   intl_utils: ^2.8.7
   mockito: ^5.4.4
   build_runner: ^2.4.8
+  flutter_gen: ^5.4.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -80,7 +80,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -90,6 +90,7 @@ flutter:
   assets:
     - .env
     - config/
+    - assets/images/SVG_CC_Logo.svg
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
