--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,11 @@ dependencies:
   provider: ^6.1.2
   meta: ^1.11.0
   bloc: ^8.1.4
-  dartz: ^0.10.1
+  fpdart: ^1.1.0
+  get_it: ^7.7.0
   connectivity_plus: ^6.0.2
-  internet_connection_checker: ^1.0.0
+  internet_connection_checker_plus: ^2.3.0
+  equatable: ^2.0.5
 flutter_intl:
   enable: true
   path: l10n # Your folder path containing .arb files
@@ -62,9 +64,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   sign_in_with_apple: ^6.1.0
+  test: ^1.24.9
   integration_test:
     sdk: flutter
   intl_utils: ^2.8.7
+  bloc_test: ^9.1.7
   mockito: ^5.4.4
   build_runner: ^2.4.8
   flutter_gen: ^5.4.0
