--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -3,82 +3,22 @@ name: Flutter CI Development
 on:
   push:
     branches: [ master ]
+  workflow_dispatch:
 
 jobs:
-  build-and-test-development:
+  deploy_dev_supabase:
     runs-on: ubuntu-latest
     env:
       ENV: dev # Set the environment variable for development
-      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
-      WEB_CLIENT_ID: ${{ secrets.WEB_CLIENT_ID }}
-      IOS_CLIENT_ID: ${{ secrets.IOS_CLIENT_ID }}
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      SUPABASE_DB_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
-      SUPABASE_PROJECT_ID: ${{ secrets.STAGING_PROJECT_ID }}
+      SUPABASE_DB_PASSWORD: ${{ secrets.DEV_DB_PASSWORD }}
+      SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
 
     steps:
-      - uses: actions/checkout@v2
-
-      # Supabase Deployment Steps
-      - name: Install Supabase CLI
-        run: curl -L https://supabase.io/cli/install | sh
-
-      - name: Authenticate Supabase CLI
-        run: supabase login -k ${{ env.SUPABASE_ACCESS_TOKEN }}
-
-      - name: Link Supabase Project
-        run: supabase link --project-ref ${{ env.SUPABASE_PROJECT_ID }}
-
-      - name: Deploy to Supabase
-        run: supabase db push
-
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@v4
+      - uses: supabase/setup-cli@v1
         with:
-          distribution: 'temurin'
-          java-version: '17.0.9'
+          version: latest
 
-      - uses: dart-lang/setup-dart@v1
-        with:
-          sdk: 'stable'
-
-      - name: Update PATH and Check Dart Version
-        run: |
-          echo "PATH=$(dirname $(which dart)):$PATH" >> $GITHUB_ENV
-          dart --version
-
-      - name: Print environment PATH
-        run: echo $PATH
-
-      - uses: subosito/flutter-action@v1
-        id: flutter
-        with:
-          flutter-version: '3.19.6'
-
-      - name: Check Bundled Dart SDK Version
-        run: flutter doctor -v
-
-      - name: Create app_config_dev.json
-        run: |
-          mkdir -p config
-          echo '{
-            "SUPABASE_URL": "${{ env.SUPABASE_URL }}",
-            "SUPABASE_ANON_KEY": "${{ env.SUPABASE_ANON_KEY }}",
-            "webClientId": "${{ env.WEB_CLIENT_ID }}",
-            "iosClientId": "${{ env.IOS_CLIENT_ID }}"
-          }' > config/app_config_dev.json
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Run linting and static analysis
-        run: flutter analyze
-
-      - name: Run tests
-        run: flutter test
-
-      - name: Build APK for development
-        run: flutter build apk --debug --target=lib/main_dev.dart --dart-define=ENV=$ENV
-
-      - name: Build iOS for development
-        run: flutter build ios --debug --target=lib/main_dev.dart --dart-define=ENV=$ENV
+      - run: supabase link --project-ref $SUPABASE_PROJECT_ID
+      - run: supabase db push
