--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -3,7 +3,6 @@ name: Flutter CI Development
 on:
   push:
     branches: [ master ]
-  workflow_dispatch:
 
 jobs:
   deploy_dev_supabase:
@@ -12,7 +11,7 @@ jobs:
       ENV: dev # Set the environment variable for development
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
       SUPABASE_DB_PASSWORD: ${{ secrets.DEV_DB_PASSWORD }}
-      SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
+      SUPABASE_PROJECT_ID: ${{ secrets.DEV_PROJECT_ID }}
 
     steps:
       - uses: actions/checkout@v4
