--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -11,7 +11,7 @@ jobs:
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
       SUPABASE_DB_PASSWORD: ${{ secrets.DEV_DB_PASSWORD }}
-      SUPABASE_PROJECT_ID: nfzsvyypwbbwsutqfhuy
+      SUPABASE_PROJECT_ID: ${{ secrets.DEV_PROJECT_ID }}
 
     steps:
       - uses: actions/checkout@v4
