--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,10 +66,10 @@ android {
             storePassword keystoreProperties['storePassword']
         }
         debug {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-            storePassword keystoreProperties['storePassword']
+            storeFile file('C:\\Users\\tomzq\\.android\\debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
         }
     }
 
