--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -77,8 +77,4 @@ jobs:
         run: flutter test
 
       - name: Build APK for development
-        run: flutter build apk --debug --target=lib/main_prod.dart --dart-define=ENV=$ENV
-
-      - name: Build iOS for development
-        run: flutter build ios --debug --target=lib/main_prod.dart --dart-define=ENV=$ENV
-
+        run: flutter build apk --debug --target=lib/main_dev.dart --dart-define=ENV=$ENV
