--- a/.github/workflows/ci_production.yml
+++ b/.github/workflows/ci_production.yml
@@ -2,31 +2,64 @@ name: Flutter CI Production
 
 on:
   push:
-    branches: [ master ]
+    branches: [ development ]
 
 jobs:
-  build-and-test-production:
+  build-and-test-development:
     runs-on: ubuntu-latest
+    env:
+      ENV: prod # Set the environment variable for development
+
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
-          java-version: '12'
-      - uses: subosito/flutter-action@v1
+          java-version: '17.0.9'
+
+      - uses: dart-lang/setup-dart@v1
         with:
-          flutter-version: '3.3.1' # Specify your Flutter version
+          sdk: 'stable'
+
+      - name: Update PATH and Check Dart Version
+        run: |
+          echo "PATH=$(dirname $(which dart)):$PATH" >> $GITHUB_ENV
+          dart --version
+
+      - name: Print environment PATH
+        run: echo $PATH
+
+      - uses: subosito/flutter-action@v1
+        id: flutter
+        with:
+          flutter-version: '3.19.6'
+
+      - name: Check Bundled Dart SDK Version
+        run: flutter doctor -v
+
+      - name: Create app_config_dev.json
+        run: |
+          mkdir -p config
+          echo '{
+            "SUPABASE_URL": "${{ secrets.SUPABASE_URL }}",
+            "SUPABASE_ANON_KEY": "${{ secrets.SUPABASE_ANON_KEY }}",
+            "webClientId": "${{ secrets.WEB_CLIENT_ID }}",
+            "iosClientId": "${{ secrets.IOS_CLIENT_ID }}"
+          }' > config/app_config_dev.json
+
       - name: Install dependencies
         run: flutter pub get
+
       - name: Run linting and static analysis
         run: flutter analyze
+
       - name: Run tests
         run: flutter test
-        if: always() # Proceed even if previous steps failed, to allow failure notification
-      - name: Build APK for production
-        run: flutter build apk --release
-        if: success() # Proceed only if tests were successful
-      - name: Build iOS for production
-        run: flutter build ios --release
-        if: success() # Proceed only if tests were successful
-    # Add caching, handling .env files, and other necessary steps as needed
+
+      - name: Build APK for development
+        run: flutter build apk --debug --target=lib/main_prod.dart --dart-define=ENV=$ENV
+
+      - name: Build iOS for development
+        run: flutter build ios --debug --target=lib/main_prod.dart --dart-define=ENV=$ENV
+
