--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,7 +66,7 @@ android {
             storePassword keystoreProperties['storePassword']
         }
         debug {
-            storeFile file('C:\\Users\\tomzq\\.android\\debug.keystore')
+            storeFile file('C:/Users/tomzq/.android/debug.keystore')
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
