--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,10 +66,10 @@ android {
             storePassword keystoreProperties['storePassword']
         }
         debug {
-            storeFile file('C:/Users/tomzq/.android/debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            keyAlias keystoreProperties['debugKeyAlias']
+            keyPassword keystoreProperties['debugKeyPassword']
+            storeFile file('closetconscious/android/debug.keystore')
+            storePassword keystoreProperties['debugStorePassword']
         }
     }
 
