Update for trunk based development.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,12 +79,13 @@ android {
         debug {
             signingConfig signingConfigs.debug
             debuggable true
-            signingConfig signingConfigs.debug
+            shrinkResources false
         }
 
         release {
             signingConfig signingConfigs.release
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
