--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,14 +62,14 @@ android {
         debug {
             keyAlias keystoreProperties['debugKeyAlias']
             keyPassword keystoreProperties['debugKeyPassword']
-            storeFile file('debug.keystore')
+            storeFile file('app/debug.keystore')
             storePassword keystoreProperties['debugStorePassword']
         }
 
         release {
             keyAlias keystoreProperties['prodKeyAlias']
             keyPassword keystoreProperties['prodKeyPassword']
-            storeFile file('prod_keystore.jks')
+            storeFile file('app/prod_keystore.jks')
             storePassword keystoreProperties['prodStorePassword']
         }
     }
