Try to see how to apply key properties.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,7 +62,7 @@ android {
         debug {
             keyAlias keystoreProperties['debugKeyAlias']
             keyPassword keystoreProperties['debugKeyPassword']
-            storeFile file('debug.keystore')
+            storeFile keystoreProperties['debugStoreFile'] ? file(keystoreProperties['debugStoreFile']) : null
             storePassword keystoreProperties['debugStorePassword']
         }
 
