--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Setup key.properties
         run: |
-          echo "debugStoreFile=android/app/debug.keystore" >> android/key.properties
+          echo "debugStoreFile=android/app/debug.keystore" >> android/app/key.properties
           echo "debugStorePassword=${{ secrets.DEBUG_STORE_PASSWORD }}" >> android/key.properties
           echo "debugKeyAlias=${{ secrets.DEBUG_KEY_ALIAS }}" >> android/key.properties
           echo "debugKeyPassword=${{ secrets.DEBUG_KEY_PASSWORD }}" >> android/key.properties
