Update auto-approval and update flutter prod. Supabase should crash but lets see.

--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -107,7 +107,7 @@ jobs:
           path: build/app/outputs/flutter-apk/app-debug.apk
 
   auto-approve:
-    needs: dev_build
+    needs: deploy_dev_ui
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
