Update auto-approval and update flutter prod. Supabase should crash but lets see.

--- a/.github/workflows/ci_development.yml
+++ b/.github/workflows/ci_development.yml
@@ -117,7 +117,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
   deploy_prod_supabase:
-    needs: manual_approval
+    needs: auto-approve
     runs-on: ubuntu-latest
 
     env:
