--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -74,13 +74,13 @@ jobs:
         run: flutter test
 
       - name: Build APK for development
-        run: flutter build apk --debug --target=lib/main_dev.dart --dart-define=ENV=$ENV --split-per-abi
+        run: flutter build apk --flavor dev --target=lib/main_dev.dart --dart-define=ENV=$ENV --split-per-abi
 
       - name: Upload development APK
         uses: actions/upload-artifact@v2
         with:
           name: dev-apk
-          path: build/app/outputs/flutter-apk/app-arm64-v8a-debug.apk
+          path: build/app/outputs/flutter-apk/dev/app-arm64-v8a-debug.apk
 
   deploy_prod_supabase:
     needs: deploy_dev_ui
@@ -152,10 +152,10 @@ jobs:
         run: flutter test
 
       - name: Build APK for production
-        run: flutter build apk --release --target=lib/main_prod.dart --dart-define=ENV=$ENV --split-per-abi
+        run: flutter build apk --release --flavor prod --target=lib/main_prod.dart --dart-define=ENV=$ENV --split-per-abi
 
       - name: Upload production APK
         uses: actions/upload-artifact@v2
         with:
           name: prod-apk
-          path: build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+          path: build/app/outputs/flutter-apk/prod/app-arm64-v8a-release.apk
