--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -74,7 +74,7 @@ jobs:
         run: flutter test
 
       - name: Build APK for development
-        run: flutter build apk --flavor dev --target=lib/main_dev.dart --dart-define=ENV=$ENV --split-per-abi
+        run: flutter build apk --debug --flavor dev --target=lib/main_dev.dart --dart-define=ENV=$ENV --split-per-abi
 
       - name: Upload development APK
         uses: actions/upload-artifact@v2
