--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^6.2.1
   supabase_flutter: ^2.5.2
   fluttertoast: ^8.2.4
+  image_picker: ^1.1.2
   flutter_signin_button: ^2.0.0
   flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
